Updated security and added JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 server.error.include-message=always
+jwt.secret=fMVYMQPh7nj+dFMRdOsRO88eV0Ep59E3KZk51BDRP+c=
+jwt.expiration=8640000
